fix: Move social links out of the inner card and wrap card content with an a

--- a/src/components/Ecosystem/Projects/styles.module.css
+++ b/src/components/Ecosystem/Projects/styles.module.css
@@ -2,6 +2,10 @@
   margin-top: 0 !important;
 }
 
+.cardWrapper {
+  position: relative;
+}
+
 .searchField :global .MuiInputBase-root {
   background: white;
 }
